fixed header on mobile

--- a/test2.css
+++ b/test2.css
@@ -9,7 +9,9 @@
     background-size: auto;
     display: flex;
     justify-content: center;
-    height: 112px;
+    height: auto;
+    word-wrap: break-word;
+    position: relative;
 } 
 
 ul.head{
@@ -92,6 +94,10 @@ li.head a:hover {
     .container{
         display: flex;
     }
+
+    .nepneps{
+        font-size: 20px;
+    }
 }
 
 .titleheader{
@@ -99,9 +105,9 @@ li.head a:hover {
 }
 
 .nepheader{
-    display:flex;
-    justify-content:center;
-    align-items:center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     align-self: center;
 }
 
@@ -111,6 +117,7 @@ li.head a:hover {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     position: relative;
     margin-top: 1%;
+    font-size: 30px;
 }
 
 #toc {
